--- a/.changes/v2025.4.24.md
+++ b/.changes/v2025.4.24.md
@@ -1,4 +1,7 @@
 ## [April 24, 2025](https://github.com/opslevel/opslevel-mcp/compare/v0.0.0...v2025.4.24)
+
+- Initial Release
+
 ## Docker Image
 
   - `docker pull public.ecr.aws/opslevel/mcp:v2025.4.24`
